--- a/lib/ng-vcl/src/tour/tour.component.html
+++ b/lib/ng-vcl/src/tour/tour.component.html
@@ -1,13 +1,12 @@
 <vcl-popover #popover
-  [debug]="debugPopover"
   [visible]="visible"
   [target]="target"
-  [targetX]="targetX"
-  [attachmentX]="attachmentX"
-  [offsetAttachmentX]="offsetAttachmentX"
-  [targetY]="targetY"
-  [attachmentY]="attachmentY"
-  [offsetAttachmentY]="offsetAttachmentY"
+  [originX]="originX"
+  [overlayX]="overlayX"
+  [offsetX]="offsetX"
+  [originY]="originY"
+  [overlayY]="overlayY"
+  [offsetY]="offsetY"
   [style.z-index]="tour.options?.zIndex">
 
   <div class="vclTourContainer">
