--- a/lib/ng-vcl/src/notifier/notifier.component.html
+++ b/lib/ng-vcl/src/notifier/notifier.component.html
@@ -9,9 +9,9 @@
                     [textColor]="notifier.textColor"
                     [backgroundColor]="notifier.backgroundColor">
   <vcl-notification-body>
-      <div *ngIf="notifier.text && !notifier.html && !notifier.opts.contentComponentDetails">{{notifier.text}}</div>
-      <div *ngIf="notifier.text && notifier.html && !notifier.opts.contentComponentDetails" [innerHtml]="notifier.text"></div>
-      <vcl-notifier-content-component *ngIf="notifier.opts.contentComponentDetails" [wormholeComponentDetails]="notifier.opts.contentComponentDetails"></vcl-notifier-content-component>
+      <div *ngIf="notifier.text && !notifier.html && !notifier.contentComponentDetails">{{notifier.text}}</div>
+      <div *ngIf="notifier.text && notifier.html && !notifier.contentComponentDetails" [innerHtml]="notifier.text"></div>
+      <vcl-notifier-content-component *ngIf="notifier.contentComponentDetails" [wormholeComponentDetails]="notifier.contentComponentDetails"></vcl-notifier-content-component>
     </vcl-notification-body>
   </vcl-notification>
 </ng-container>
