label: fix demo

--- a/demo/app/demos/label/demo.component.html
+++ b/demo/app/demos/label/demo.component.html
@@ -1,17 +1,17 @@
 <h3>Default label</h3>
-<span vcl-label>default</span>
+<vcl-label type>default</vcl-label>
 
 <h3>Primary label</h3>
-<span vcl-label="primary">primary</span>
+<vcl-label type="primary">primary</vcl-label>
 
 <h3>Success label</h3>
-<span vcl-label="success">success</span>
+<vcl-label type="success">success</vcl-label>
 
 <h3>Info label</h3>
-<span vcl-label="info">info</span>
+<vcl-label type="info">info</vcl-label>
 
 <h3>Warning label</h3>
-<span vcl-label="warning">warning</span>
+<vcl-label type="warning">warning</vcl-label>
 
 <h3>Error label</h3>
-<span vcl-label="error">error</span>
+<vcl-label type="error">error</vcl-label>
