overlay, layer, alert, popover upgrade

--- a/demo/app/demos/layer/bar.component.html
+++ b/demo/app/demos/layer/bar.component.html
@@ -5,7 +5,7 @@
   </div>
   <div class="vclPanelBody">
     <p class="vclPanelContent">
-      Component layer content
+      bar layer content
     </p>
   </div>
   <div class="vclPanelFooter vclNoBg vclLayoutHorizontal vclLayoutJustified vclLayoutCenter">
