--- a/demo/app/demos/dropdown/async.component.html
+++ b/demo/app/demos/dropdown/async.component.html
@@ -1,50 +1,29 @@
-<h3>vcl-autocomplete with fixed data</h3>
 
-<vcl-embedded-input-group prepIcon="fas:search">
-  <input #inputCountry 
-         placeholder="Search"
-         vclEmbeddedInputGroup   
-         [vclAutocomplete]="acCountry"
-         />
-</vcl-embedded-input-group>
-
-<vcl-autocomplete #acCountry="vclAutocomplete" target="inputCountry">
-  <vcl-autocomplete-header>Europe</vcl-autocomplete-header>
-  <vcl-autocomplete-item value="gr">Greece</vcl-autocomplete-item>
-  <vcl-autocomplete-item value="fr">France</vcl-autocomplete-item>
-  <vcl-autocomplete-item value="de">Germany</vcl-autocomplete-item>
-  <vcl-autocomplete-item value="uk">The United Kingdom of Great Britain and Northern Ireland</vcl-autocomplete-item>
-  <vcl-autocomplete-header>Asia</vcl-autocomplete-header>
-  <vcl-autocomplete-item value="jp">Japan</vcl-autocomplete-item>
-  <vcl-autocomplete-item value="cn">China</vcl-autocomplete-item>
-  <vcl-autocomplete-item value="th">Thailand</vcl-autocomplete-item>
-</vcl-autocomplete>
-
-<h3>vcl-autocomplete with async data</h3>
+<h3>vcl-dropdown with async data</h3>
 
 <vcl-embedded-input-group prepIcon="fas:search">
   <input #inputBooks 
          vclEmbeddedInputGroup 
          placeholder="Search Google Books api" 
          (input)="search$.next($event.target.value)"
-         [vclAutocomplete]="acBooks"
-         [vclAutocompleteDisabled]="search.state === 'cleared'"
-         [vclAutocompleteSelect]="'void'"
-          />
-  <button vcl-icon-button 
-          vclEmbeddedInputGroup 
+         [vclDropdown]="dropdownBooks"
+         [vclDropdownDisabled]="search.state === 'cleared'"
+         [vclDropdownMapValue]="'void'"
+         (vclDropdownSelect)="onSelectBook($event)"
+         />
+  <button vcl-embedded-input-group 
           (click)="inputBooks.value = ''; inputBooks.focus(); search$.next('')" 
           [icon]="'fas:times-circle'">
   </button>
 </vcl-embedded-input-group>
 
-<vcl-autocomplete #acBooks="vclAutocomplete" (itemSelected)="onSelectBook($event);">
+<vcl-dropdown #dropdownBooks="vclDropdown">
   <vcl-busy-indicator *ngIf="search.state === 'loading'" style="padding: 1em"></vcl-busy-indicator>
   <div *ngIf="search.state === 'success' && search.books.length === 0" style="padding: 1em">No books found</div>
   <ng-container *ngIf="search.state === 'success' && search.books.length > 0">
-    <vcl-autocomplete-item *ngFor="let book of search.books" [value]="book">{{book.title}}</vcl-autocomplete-item>
+    <vcl-dropdown-label-item *ngFor="let book of search.books" [value]="book">{{book.title}}</vcl-dropdown-label-item>
   </ng-container>
-</vcl-autocomplete>
+</vcl-dropdown>
 
 <ng-container *ngIf="books.length > 0">
 
