--- a/lib/ng-vcl/src/dropdown/dropdown.component.html
+++ b/lib/ng-vcl/src/dropdown/dropdown.component.html
@@ -1,43 +1,3 @@
-<ul vcl-metalist #metalist
-  class="vclDropdown vclOpen"
-  role="listbox"
-  [class.vclLayoutHidden]="state === DropdownState.Closed" 
-  [value]="value"
-  [mode]="mode"
-  [maxSelectableItems]="maxSelectableItems"
-  [class.vclDisabled]="disabled"
-  [attr.tabindex]="tabindex"
-  [attr.aria-multiselectable]="mode === 'multiple'"
-  [style.position]="'static'"
-  (change)="onMetalistChange($event)"
-  (focus)="onMetalistFocus()"
-  (blur)="onMetalistBlur()"
-  (keydown)="onMetalistKeydown($event)"
-  (itemsChange)="onItemsChange()"
-  >
-    <li 
-      *ngFor="let item of items" 
-      vcl-metalist-item
-      #meta=meta
-      [metadata]="item"
-      [disabled]="disabled || item.disabled"
-      [value]="item.value"
-      role="option"
-      class="vclDropdownItem"
-      [class.vclSelected]="meta.selected"
-      [class.vclDisabled]="disabled || meta.disabled"
-      [class.vclHighlighted]="focused && meta.marked"
-      [attr.aria-selected]="meta.selected"
-      (click)="onMetalistItemTap(meta)">
-      <vcl-icogram *ngIf="item.label" class="vclDropdownItemLabel"
-         [prepIcon]="item.prepIcon"
-         [appIcon]="item.appIcon"
-      >
-        {{item.label}}
-      </vcl-icogram>
-      <div *ngIf="item.sublabel" class="vclDropdownItemSubLabel">
-        {{item.sublabel}}
-      </div>
-      <wormhole *ngIf="item._content" [connect]="item._content"></wormhole>
-    </li>
-</ul>
+<ng-template>
+  <ng-content></ng-content>
+</ng-template>
