--- a/demo/app/demos/token/demo.component.html
+++ b/demo/app/demos/token/demo.component.html
@@ -1,25 +1,33 @@
 <h3>single tokens</h3>
-<vcl-token label="my token"></vcl-token>
-<vcl-token label="my selected token" [selected]="true"></vcl-token>
-<vcl-token label="my removable token" [removable]="true" (remove)="onRemove($event)"></vcl-token>
-<vcl-token label="my icon token" [removable]="true" (remove)="onRemove($event)"></vcl-token>
+<vcl-token>my token</vcl-token>
+<vcl-token [selected]="true">my selected token</vcl-token>
+<vcl-token [removable]="true" (remove)="onRemove($event)">my removable token</vcl-token>
+<vcl-token [removable]="true" (remove)="onRemove($event)">my icon token</vcl-token>
 
 <br/>
 
 <h3>tokenlist</h3>
-<vcl-token-list [selectable]="true" (tokensChange)="onListChange($event);">
-  <vcl-token label="my token 1" value="1"></vcl-token>
-  <vcl-token label="my token 2" [selected]="true" value="2"></vcl-token>
+<vcl-token-list [value]="[1]" (valueChange)="onListChange($event);">
+  <vcl-token [value]="1">my token 1</vcl-token>
+  <vcl-token [value]="2">my token 2</vcl-token>
 </vcl-token-list>
+<br/>
 
+<h3>selectable and removable tokenlist</h3>
+<vcl-token-list [value]="[1]" [selectable]="true" [removable]="true" (valueChange)="onListChange($event);">
+  <vcl-token [value]="1">my token 1</vcl-token>
+  <vcl-token [value]="2">my token 2</vcl-token>
+</vcl-token-list>
 <br/>
 
 <h3>tokeninput</h3>
 <vcl-token-input-container (tokensChange)="onInputChange($event);">
-  <input vcl-input vcl-token-input />
+  <input vclInput vclTokenInput />
+  <!-- <input vclInput vcl-token-input /> -->
 </vcl-token-input-container>
 
 <h3>tokeninput (disabled)</h3>
 <vcl-token-input-container [disabled]="true">
-  <input vcl-input vcl-token-input />
+  <input vclInput vclTokenInput />
+  <!-- <input vclInput vcl-token-input /> -->
 </vcl-token-input-container>
