--- a/lib/ng-vcl/src/dropdown/components/dropdown-item.component.html
+++ b/lib/ng-vcl/src/dropdown/components/dropdown-item.component.html
@@ -1,1 +1,3 @@
 <ng-content></ng-content>
+<ng-content select="vcl-dropdown-label"></ng-content>
+<ng-content select="vcl-dropdown-sublabel"></ng-content>
