--- a/demo/app/demos/button-group/demo.component.html
+++ b/demo/app/demos/button-group/demo.component.html
@@ -1,21 +1,21 @@
-<h3>Basic Button Group</h3>
-<vcl-button-group [(ngModel)]="value1">
+<h3>Horizontal button group</h3>
+<vcl-button-group [(value)]="value1">
   <button vcl-button [value]="1">One</button>
   <button vcl-button [value]="2">Two</button>
   <button vcl-button [value]="3">Three</button>
 </vcl-button-group>
 <p>Selected value: {{value1}}</p>
 
-<h3>Vertical Button Group</h3>
-<vcl-button-group class="vclVertical" style="width: 10em" [(ngModel)]="value2">
+<h3>Vertical button group</h3>
+<vcl-button-group class="vclVertical" style="width: 10em" [(value)]="value2">
   <button vcl-button [value]="1">One</button>
   <button vcl-button [value]="2">Two</button>
   <button vcl-button [value]="3">Three</button>
 </vcl-button-group>
 <p>Selected value: {{value2}}</p>
 
-<h3>Button Group with multiselection</h3>
-<vcl-button-group mode="multiple" [(ngModel)]="value3">
+<h3>Horizontal button group (multiple selection)</h3>
+<vcl-button-group selectionMode="multiple" [(value)]="value3">
   <button vcl-square-button [value]="'italic'">
     <vcl-icon icon="fas:italic"></vcl-icon>
   </button>
@@ -29,8 +29,8 @@
 <p>Selected values: {{value3}}</p>
 
 
-<h3>Disabled Button Group</h3>
-<vcl-button-group [disabled]="true" mode="multiple">
+<h3>Disabled button group</h3>
+<vcl-button-group [disabled]="true" selectionMode="multiple">
   <button vcl-square-button [value]="'italic'">
     <vcl-icon icon="fas:italic"></vcl-icon>
   </button>
