--- a/lib/ng-vcl/src/file-input/file-input.component.html
+++ b/lib/ng-vcl/src/file-input/file-input.component.html
@@ -1,5 +1,5 @@
 <input #input type="file" [style.display]="'none'" (change)="onInputChange()" [accept]="accept" [multiple]="multiple" [disabled]="disabled" />
-<div class="vclFileInputIcon vclIcon {{ icon }}" aria-hidden="true" aria-label="account" role="img"></div>
+<vcl-icon class="vclFileInputIcon" [icon]="'vcl:upload'" aria-hidden="true" role="img"></vcl-icon>
 <div class="vclFileInputPlaceholder">
   <ng-container *ngIf="filename">{{ filename }}</ng-container>
   <div *ngIf="!filename">
